--- a/EXPOSE/Dockerfile
+++ b/EXPOSE/Dockerfile
@@ -1,4 +1,5 @@
 FROM almalinux/9-base
 RUN dnf install nginx -y 
-EXPOSE 80
+#expose means it not open the port just it tell the user that which port will open when the image runs.
+EXPOSE 80   
 CMD ["nginx", "-g", "daemon off;"]
