--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,4 +1,5 @@
 FROM almalinux/9-base
 #Install 'ping' command and clean up to reduce image size
 RUN dnf install -y iputils && dnf clean all
-CMD ["ping", "google.com"]
+# CMD ["ping", "google.com"]
+ENTRYPOINT [ "ping", "google.com" ]
