--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -2,4 +2,5 @@ FROM almalinux/9-base
 #Install 'ping' command and clean up to reduce image size
 RUN dnf install -y iputils && dnf clean all
 # CMD ["ping", "google.com"]
-ENTRYPOINT [ "ping", "google.com" ]
+CMD ["google.com"]
+ENTRYPOINT ["ping"]
