--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux/9-base
 RUN mkdir /tmp/docker
 WORKDIR /tmp/docker/
-RUN PWD 
+RUN pwd
 RUN echo "Hello" > hello.txt
 CMD ["sleep", "100"]
