--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,4 +1,5 @@
-FROM almalinux/9-base
+ARG version
+FROM almalinux/${version}
 ARG course="Devops with AWS" \
     duration="120hr"
 RUN echo "Course: $course, duration: $duration"
