--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,5 +1,5 @@
 ARG version
-FROM almalinux/${version}
+FROM almalinux:${version}
 ARG course="Devops with AWS" \
     duration="120hr"
 RUN echo "Course: $course, duration: $duration"
